--- a/TODO
+++ b/TODO
@@ -1,21 +1,14 @@
 http://nesdev.com/NESDoc.pdf
 
 APU:
-  - Implement frame counter: when to tick what
-  - Implement pulse: envelope (constant_volume, volume_val), sweep (sweep unit, period, negate, shift)
-  - Implement triangle: linear counter (control_flag, control_reload, length_counter)
-  - Implement noise: envelope (constant_volume, volume_val, loop), shift register
+  - Ensure sweep is correct
+  - Ensure linear counter is correct
   - Implement proper mixing using table lookup
-
-  - Figure out detune problem that occurs every so often
-    - Wavelength is increased, so check the timings in the audio_callback
 
   - High frequency sounds don't sound right because APU frequency is not divisble by 44100Hz
     - Pulse, Noise & DMC, where t > 48 should in theory sound fine (nyquist-shannon)
     - Triangle, where t > 24 should in theory sound fine (nyquist-shannon)
     - But for some reason the audio still sounds off at higher values of t
-
-  - Implement memory interface
 
 CPU:
   - Review and refactor: add/sub, shifts, jsr/rts, php, plp
